# Transformer-Decoder-Only

./: .gitignore  pyproject.toml
data/: input.txt
docs/: battle-plan.md
src/transformer_decoder_only/: __init__.py
src/transformer_decoder_only/attention/: causal_mask.py  multi_head_attention.py  self_attention_head.py
src/transformer_decoder_only/blocks/: decoder_block.py
src/transformer_decoder_only/config/: default.py
src/transformer_decoder_only/datasets/: language_model_dataset.py
src/transformer_decoder_only/embeddings/: positional_embedding.py  token_embedding.py
src/transformer_decoder_only/inference/: generate.py
src/transformer_decoder_only/mlp/: feed_forward.py
src/transformer_decoder_only/models/: decoder_transformer.py
src/transformer_decoder_only/tokenisation/: char_tokeniser.py
src/transformer_decoder_only/training/: evaluate.py  trainer.py
src/transformer_decoder_only/utils/: seed.py  shapes.py
tests/: test_attention.py  test_dataset.py  test_model.py  test_tokeniser.py
