[project]
name = "transformer-decoder-only"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Roger Campbell", email = "the_rfc@hotmail.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11.0",
]

[project.scripts]
transformer-decoder-only = "transformer_decoder_only:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
